FTL B3 binary snippets should do exceptions https://bugs.webkit.org/show_bug.cgi?id=152852

Reviewed by Saam Barati.

This reduces the number of JSC test failures to 110.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::DFG::LowerDFGToLLVM::emitBinarySnippet):
(JSC::FTL::DFG::LowerDFGToLLVM::emitBinaryBitOpSnippet):
(JSC::FTL::DFG::LowerDFGToLLVM::emitRightShiftSnippet):
* tests/stress/ftl-shr-exception.js: Added.
(foo):
(result.foo.valueOf):
* tests/stress/ftl-sub-exception.js: Added.
(foo):
(result.foo.valueOf):
* tests/stress/ftl-xor-exception.js: Added.
(foo):
(result.foo.valueOf):



Canonical link: https://commits.webkit.org/170962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194746 268f45cc-cd09-0410-ab3c-d52691b4dbfc